static/assets/styles/styles.css
@font-face {
    font-family: 'MarioFont';
    src: url("../fonts/SuperPlumberBrothers-y00V.ttf");
}

body {
    font-family: MarioFont, sans-serif;
    color: #fff;
    letter-spacing: .1rem;
    height: 100vh;
    background-image: url(../images/mario-background-wqhd-1440p-wallpaper.jpg);
    background-size: cover;
    background-position: bottom;
}

#gameBoard {
    font-size: 1.7rem;
    position: relative;
    max-width: 800px;
    max-height: 800px;
    width: 80vw;
    height: 80vw;
    background: rgba(200, 200, 200, 0.5);
    margin: auto;
    display: grid;
    grid-template-columns: auto auto auto;
    grid-template-rows: auto auto auto;
}

#gameRoomName {
    padding: 20px;
    text-align: center;
    font-size: 2.7rem;
    color: #fff;
    letter-spacing: 3px;
}

.wait-for-player {
    white-space: nowrap;
    position: absolute;
    color: #fff;
    letter-spacing: 3px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    max-height: 100%;
}

.gameCell {
    border: 1px solid black;
}

#charSelect {
    display: none;
}

#gameStartModal, #gameOverModal {
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    justify-content: center;
    align-items: center;
    background-color: rgba(20, 20, 20, 0.8);
}

#gameStartModal {
    display: flex;
}

#gameOverModal {
    display: none;
    color: #fff;
}

.gameWinner {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column;
}

.gameWinner p {
    font-size: 2.6rem;
    transition: 1s all ease;
    position: relative;
    opacity: 0;
    letter-spacing: 3px;
}

.gameWinner img {
    position: relative;
    transition: top 0.4s ease-in;
    top: -100vh;
}

#charSelect, #roomSelect {
    width: 90%;
    height: 40vh;
    min-height: 300px;
    max-width: 600px;
    position: relative;
    padding: 20px;
    box-sizing: border-box;
    background: #e3e3e3 url("../images/d6mmetf-e45edb72-d3f8-465d-907c-4f71c0de9faa.png") no-repeat bottom/cover;
}

#charSelect .joinCreateSwitch {
    top: 20px;
    left: 20px;
}

#roomSelect {
    display: flex;
}

.joinCreateSwitch {
    position: absolute;
    top: 0;
    left: 0;
}

::-webkit-scrollbar {
    width: 10px;
}

/* Track */
::-webkit-scrollbar-track {
    box-shadow: inset 0 0 5px grey;
    border-radius: 3px;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: red;
    border-radius: 3px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
    background: #b30000;
}

#roomList {
    margin-top: 0;
    list-style-type: none;
    overflow-y: scroll;
    width: 55%;
    min-height: 30%;
    background: rgba(0,0,0,0.8);
    border-radius: 5px;
    padding: 20px
}

#roomList li {
    margin-bottom: 10px;
    transition: 0.4s  ease;
}

#roomList li.link:hover {
    cursor: pointer;
    color: #e2e715;
}

#createRoom, #existingRooms {
    position: relative;
    width: 100%;
    height: 100%;
    flex-flow: column;
    align-items: center;
    justify-content: center;
}

#existingRooms {
    display: flex;
}

#createRoom {
    display: none;
}

#createRoom h2 {
    margin-bottom: 10px;
    white-space: nowrap;
}

button {
    font-family: MarioFont, sans-serif;
    min-width: 160px;
    border-radius: 5px;
    color: #ed891a;
    background: #e2e715;
    font-size: 1.3rem;
    border: 2px solid #ed891a;
    padding: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
}

@media screen and (max-height: 700px) {
    button {
        padding-top: 15px;
    }

    button.link {
        padding-top: 12px;
    }
}

button.link {
    font-size: 1rem;
}

button:hover {
    color: #ed891a;
    cursor: pointer;
    background-color: #fff;
}

#createRoom input {
    min-width: 215px;
    border: 2px solid rgba(120,120,120, 0.6);
    border-radius: 5px;
    padding: 5px;
    margin-bottom: 12px;
    background: rgba(255,255,255, 0.8);
}

#charSelect {
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.roomFullMessage, .roomTakenMessage {
    text-align: center;
}

.error-message {
    border: 1px solid red;
    padding: 20px;
    position: absolute;
    top: 7%;
    width: 70%;
    transform: translateX(-50%);
    color: red;
}

#playerContainer {
    z-index: -1;
    display: flex;
    justify-content: center;
    position: relative;
}

.playerIndicator {
    width: 26vw;
    height: 20vw;
    background-size: 50%;
    background-repeat: no-repeat;
    background-position: center;
}

.playerIndicatorBackground {
    background-color: rgba(10,120,200,0.3);
}

input[disabled=disabled] ~ label {
    color: red;
}

#playerSelectContainer {
    display: flex;
    flex-wrap: wrap;
    margin-top: 70px;
}

#playerSelectContainer p {
    position: relative;
    width: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#playerSelectContainer p input {
    width: 80px;
    height: 80px;
    visibility: hidden;
    margin: 0;
    z-index: 1;
    position: absolute;
    top: -80px;
}

#playerSelectContainer p label {
    position: absolute;
    height: 80px;
    width: 80px;
    top: -80px;
    border: 2px solid transparent;
}

#playerSelectContainer p input ~ label {
    background-size: 75%;
    background-repeat: no-repeat;
    background-position: center;
}

#playerSelectContainer p input[value='1'] ~ label {
    background-image: url(../images/Mario.png);
}

#playerSelectContainer p input[value='2'] ~ label {
    background-image: url(../images/Masthead_luigi.17345b1513ac044897cfc243542899dce541e8dc.9afde10b.png);
}

#playerSelectContainer p input:checked ~ label {
    border-color: yellow;
}

#playerSelectContainer p input[disabled='disabled'] ~ label {
    opacity: .5;
}

@media screen and (max-width: 550px){
    #roomSelect {
        flex-flow: column;
        justify-content: center;
        align-items: center;
    }
}

@media screen and (min-width: 768px) {
    #gameBoard {
        width: 60vw;
        height: 60vw;
    }

    #playerContainer {
        top: -38vw;
    }

    .playerIndicator {
        width: 15vw;
        height: 15vw;
    }

    .playerIndicator[player='2'] {
        margin-left: 0;
    }

    #spacer {
        width: 60vw;
        max-width: 800px;
    }
}

